--- a/assets/css/paper-dashboard.css
+++ b/assets/css/paper-dashboard.css
@@ -70,7 +70,7 @@ p {
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_typography\.scss}line{font-family:\0000344}}
 h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small, .h3 small, .h4 small, .h5 small, .h6 small, h1 .small, h2 .small, h3 .small, h4 .small, h5 .small, h6 .small, .h1 .small, .h2 .small, .h3 .small, .h4 .small, .h5 .small, .h6 .small {
-  color: #9A9A9A;
+  color: #000000;
   font-weight: 300;
   line-height: 1.4em; }
 
@@ -161,7 +161,7 @@ strong {
 /*     General overwrite     */
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_misc\.scss}line{font-family:\000032}}
 body {
-  color: #66615b;
+  color: #000000;
   font-size: 14px;
   font-family: 'Muli', Arial, sans-serif; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_misc\.scss}line{font-family:\000036}}
@@ -337,7 +337,7 @@ hr {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_sidebar-and-main-panel\.scss}line{font-family:\0000390}}
       .sidebar .nav li.active > a:after,
       .off-canvas-sidebar .nav li.active > a:after {
-        border-right: 17px solid #f4f3ef;
+        border-right: 17px solid #d2d9d0;
         border-top: 17px solid transparent;
         border-bottom: 17px solid transparent;
         content: "";
@@ -391,17 +391,17 @@ hr {
     .sidebar .logo p, .sidebar[data-background-color="white"] .logo p,
     .off-canvas-sidebar .logo p,
     .off-canvas-sidebar[data-background-color="white"] .logo p {
-      color: #66615B; }
+      color: #000000; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/mixins\/_sidebar\.scss}line{font-family:\0000314}}
     .sidebar .logo .simple-text, .sidebar[data-background-color="white"] .logo .simple-text,
     .off-canvas-sidebar .logo .simple-text,
     .off-canvas-sidebar[data-background-color="white"] .logo .simple-text {
-      color: #66615B; }
+      color: #000000; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/mixins\/_sidebar\.scss}line{font-family:\0000321}}
   .sidebar .nav li:not(.active) > a, .sidebar[data-background-color="white"] .nav li:not(.active) > a,
   .off-canvas-sidebar .nav li:not(.active) > a,
   .off-canvas-sidebar[data-background-color="white"] .nav li:not(.active) > a {
-    color: #66615B; }
+    color: #000000; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/mixins\/_sidebar\.scss}line{font-family:\0000325}}
   .sidebar .nav .divider, .sidebar[data-background-color="white"] .nav .divider,
   .off-canvas-sidebar .nav .divider,
@@ -460,7 +460,7 @@ hr {
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_sidebar-and-main-panel\.scss}line{font-family:\00003160}}
 .main-panel {
-  background-color: #f4f3ef;
+  background-color: #d2d9d0;
   background-image: linear-gradient(to bottom, transparent 0%, rgba(112, 112, 112, 0) 60%, rgba(186, 186, 186, 0.15) 100%);
   position: relative;
   z-index: 2;
@@ -502,8 +502,8 @@ hr {
   font-size: 14px;
   font-weight: 500;
   padding: 7px 18px;
-  border-color: #66615B;
-  color: #66615B;
+  border-color: #000000;
+  color: #000000;
   -webkit-transition: all 150ms linear;
   -moz-transition: all 150ms linear;
   -o-transition: all 150ms linear;
@@ -516,9 +516,9 @@ hr {
   .navbar .navbar-nav > li > a.btn:active,
   .navbar .navbar-nav > li > a.btn.active, .open >
   .navbar .navbar-nav > li > a.btn.dropdown-toggle {
-    background-color: #66615B;
+    background-color: #000000;
     color: rgba(255, 255, 255, 0.7);
-    border-color: #66615B; }
+    border-color: #000000; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/mixins\/_buttons\.scss}line{font-family:\0000314}}
     .btn:hover .caret, .btn:focus .caret, .btn:active .caret, .btn.active .caret, .open > .btn.dropdown-toggle .caret,
     .navbar .navbar-nav > li > a.btn:hover .caret,
@@ -554,12 +554,12 @@ hr {
   .navbar .navbar-nav > li > a.btn:active, fieldset[disabled]
   .navbar .navbar-nav > li > a.btn.active {
     background-color: transparent;
-    border-color: #66615B; }
+    border-color: #000000; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/mixins\/_buttons\.scss}line{font-family:\0000335}}
   .btn.btn-fill,
   .navbar .navbar-nav > li > a.btn.btn-fill {
     color: #FFFFFF;
-    background-color: #66615B;
+    background-color: #000000;
     opacity: 1;
     filter: alpha(opacity=100); }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/mixins\/_buttons\.scss}line{font-family:\0000340}}
@@ -592,7 +592,7 @@ hr {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/mixins\/_buttons\.scss}line{font-family:\0000370}}
   .btn .caret,
   .navbar .navbar-nav > li > a.btn .caret {
-    border-top-color: #66615B; }
+    border-top-color: #000000; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_buttons\.scss}line{font-family:\0000315}}
   .btn:hover, .btn:focus,
   .navbar .navbar-nav > li > a.btn:hover,
@@ -865,14 +865,14 @@ hr {
     border-top-color: #FFFFFF; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_buttons\.scss}line{font-family:\0000348}}
   .btn-neutral:hover, .btn-neutral:focus {
-    color: #66615B; }
+    color: #000000; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_buttons\.scss}line{font-family:\0000353}}
   .btn-neutral:active, .btn-neutral.active, .open > .btn-neutral.dropdown-toggle {
     background-color: #FFFFFF;
-    color: #66615B; }
+    color: #000000; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_buttons\.scss}line{font-family:\0000360}}
   .btn-neutral.btn-fill {
-    color: #66615B; }
+    color: #000000; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_buttons\.scss}line{font-family:\0000363}}
   .btn-neutral.btn-fill:hover, .btn-neutral.btn-fill:focus {
     color: #403D39; }
@@ -969,7 +969,7 @@ hr {
   background-color: #fffcf5;
   border: medium none;
   border-radius: 4px;
-  color: #66615b;
+  color: #000000;
   font-size: 14px;
   transition: background-color 0.3s ease 0s;
   padding: 7px 18px;
@@ -1083,13 +1083,13 @@ hr {
 .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
   background-color: #E3E3E3;
   cursor: not-allowed;
-  color: #9A9A9A;
+  color: #000000;
   opacity: 1;
   filter: alpha(opacity=100); }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_inputs\.scss}line{font-family:\00003143}}
 .form-control[disabled]::-moz-placeholder {
-  color: #9A9A9A;
+  color: #000000;
   opacity: 1;
   filter: alpha(opacity=100); }
 
@@ -1271,12 +1271,12 @@ textarea.form-control {
   font-size: 14px;
   font-weight: normal;
   line-height: 1.5;
-  color: #66615b;
+  color: #000000;
   cursor: pointer; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_checkbox-radio\.scss}line{font-family:\0000315}}
   .checkbox .icons,
   .radio .icons {
-    color: #66615b;
+    color: #000000;
     display: block;
     height: 20px;
     left: 0;
@@ -1448,14 +1448,14 @@ textarea.form-control {
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_navbars\.scss}line{font-family:\0000356}}
 .navbar-default {
-  background-color: #f4f3ef;
+  background-color: #d2d9d0;
   border-bottom: 1px solid #DDDDDD; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_navbars\.scss}line{font-family:\0000360}}
   .navbar-default .brand {
-    color: #66615b !important; }
+    color: #000000 !important; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_navbars\.scss}line{font-family:\0000364}}
   .navbar-default .navbar-nav > li > a:not(.btn) {
-    color: #9A9A9A; }
+    color: #000000; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_navbars\.scss}line{font-family:\0000368}}
   .navbar-default .navbar-nav > .active > a,
   .navbar-default .navbar-nav > .active > a:not(.btn):hover,
@@ -1487,7 +1487,7 @@ textarea.form-control {
     border-color: #68B3C8; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_navbars\.scss}line{font-family:\00003103}}
   .navbar-default:not(.navbar-transparent) .btn-neutral, .navbar-default:not(.navbar-transparent) .btn-neutral:hover, .navbar-default:not(.navbar-transparent) .btn-neutral:active {
-    color: #9A9A9A; }
+    color: #000000; }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_navbars\.scss}line{font-family:\00003110}}
 .navbar-form {
@@ -1571,7 +1571,7 @@ textarea.form-control {
       text-align: center; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_footers\.scss}line{font-family:\0000318}}
     .footer nav ul a:not(.btn) {
-      color: #66615b;
+      color: #000000;
       display: block;
       margin-bottom: 3px; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_footers\.scss}line{font-family:\0000323}}
@@ -1579,7 +1579,7 @@ textarea.form-control {
         color: #403D39; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_footers\.scss}line{font-family:\0000330}}
   .footer .copyright {
-    color: #66615b;
+    color: #000000;
     padding: 10px 15px;
     font-size: 14px;
     margin: 15px 3px;
@@ -1615,7 +1615,7 @@ textarea.form-control {
     margin: 0px; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_dropdown\.scss}line{font-family:\0000326}}
   .dropdown-menu .dropdown-header {
-    color: #9A9A9A;
+    color: #000000;
     font-size: 12px;
     padding: 10px 15px; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_dropdown\.scss}line{font-family:\0000333}}
@@ -1644,7 +1644,7 @@ textarea.form-control {
     margin-top: -1px; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_dropdown\.scss}line{font-family:\0000345}}
   .dropdown-menu > li > a {
-    color: #66615b;
+    color: #000000;
     font-size: 14px;
     padding: 10px 15px;
     -webkit-transition: none;
@@ -1676,7 +1676,7 @@ textarea.form-control {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_dropdown\.scss}line{font-family:\0000378}}
   .dropdown-menu > li > a:hover,
   .dropdown-menu > li > a:focus {
-    background-color: #66615B;
+    background-color: #000000;
     color: rgba(255, 255, 255, 0.7);
     opacity: 1;
     text-decoration: none; }
@@ -1735,7 +1735,7 @@ textarea.form-control {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_cards\.scss}line{font-family:\0000330}}
   .card .description {
     font-size: 16px;
-    color: #66615b; }
+    color: #000000; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_cards\.scss}line{font-family:\0000335}}
   .card h6 {
     font-size: 12px;
@@ -1745,7 +1745,7 @@ textarea.form-control {
   .card label {
     font-size: 14px;
     font-weight: 400;
-    color: #9A9A9A;
+    color: #000000;
     margin-bottom: 0px; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_cards\.scss}line{font-family:\0000345}}
     .card .category i,
@@ -2810,7 +2810,7 @@ textarea.form-control {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_responsive\.scss}line{font-family:\00003164}}
       .off-canvas-sidebar .nav > li > a {
         margin: 0px 0px;
-        color: #66615B;
+        color: #000000;
         text-transform: uppercase;
         font-weight: 600;
         font-size: 12px;
@@ -2847,7 +2847,7 @@ textarea.form-control {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/conacelelena\/paper-dashboard\/assets\/sass\/paper\/_responsive\.scss}line{font-family:\00003211}}
       .off-canvas-sidebar .nav > li.active > a:after {
         border-right: none;
-        border-left: 12px solid #f4f3ef;
+        border-left: 12px solid #d2d9d0;
         border-top: 12px solid transparent;
         border-bottom: 12px solid transparent;
         right: auto;
@@ -2861,7 +2861,7 @@ textarea.form-control {
       height: 100%;
       width: 100%;
       position: absolute;
-      background-color: #f4f3ef;
+      background-color: #d2d9d0;
       background-image: linear-gradient(to bottom, transparent 0%, rgba(112, 112, 112, 0) 60%, rgba(186, 186, 186, 0.15) 100%);
       display: block;
       content: "";
